--- a/style2.css
+++ b/style2.css
@@ -119,3 +119,92 @@ footer{
     margin-top: 20px;
 }
 
+.hed{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+.serivers,.worker{
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 15px;
+    flex-wrap: wrap;
+}
+
+.li_work{ 
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 15px;
+    flex-wrap: wrap;
+    direction: rtl;
+}
+
+.wrk_img{
+    width: 200px;
+    height:200px;
+    
+}
+
+
+.wrk_img :hover{
+    background-color: rgb(161, 159, 159); 
+    color: beige;
+    font-weight: bold;
+}
+
+.workes{
+    margin: 20px;
+    padding: 10px;
+
+}
+
+.askes{
+    margin: 20px;
+    padding: 20px;
+    direction: rtl;
+    display: flex;
+}
+
+.img_ask{
+    height: 400px;
+}
+
+.sec1{
+    width:50%;
+    height: 400px;
+}
+.sec2{
+    width: 50%;
+    height: 400px;
+
+}
+
+.clients{
+    margin: 20px;
+    padding: 20px;
+    width: 95%;
+    
+}
+
+.imd_sl{
+    height: 400px;
+}
+
+.card{
+    width: 400px;
+    height:500px;
+}
+
+.card-img-top{
+    width: 100%;
+    height: 50%;
+}
+
+.card-body{
+    width: 100%;
+    height: 50%;
+}
