--- a/style2.css
+++ b/style2.css
@@ -208,3 +208,51 @@ footer{
     width: 100%;
     height: 50%;
 }
+
+.listimage1 {
+  border-radius: 5%;
+  width: 800px;
+  height: 500px;
+  margin-top: 20px;
+}
+.marknav1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  background-color: #fad39a;
+  height: 200px;
+  width: 800px;
+  margin-left: 20%;
+  border-radius: 20%;
+}
+.marknav2 {
+  margin-top: 40px;
+  margin-bottom: 50px;
+}
+.marknav3 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+}
+.marknav4 {
+  display: flex;
+  gap: 30px;
+  margin-top: 60px;
+  justify-content: space-around;
+}
+h6 {
+  text-align: center;
+  width: 50%;
+  margin-left: 25%;
+}
+.marksection {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 350px;
+  text-align: center;
+  border: 2px solid #ffbd59;
+  border-radius: 2%;
+}
